Bugfix/fix google maps api (#61)
* feat: Add Google Maps API configuration to configmap and values files

* feat: Add validation for GeoLocation fields in trip request classes

* feat: Add new endpoints for retrieving trip updates and comments by ID

* feat: Update CORS and security headers configuration for improved API security